fixed docs alignment in mobile view

fixed docs alignment in mobile view


fixed docs alignment in mobile view


fixed responsiveness


 layout/fix


code updation


remove extra padding


unstaged changes

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -189,6 +189,12 @@ ul.share li i {
 .docs-article-container {
     max-width: 100%;
 }
+@media (max-width: 1200px) {
+
+    .container-fluid.docs {
+      padding-top: 0 !important; 
+    }
+  }
 
 /*********************************
 * Blog list 
@@ -524,9 +530,10 @@ ul.share li i {
     text-align: center;
     font-size: 2.5rem !important;
     font-weight: bold;
-    padding-bottom: 40px;
     color: #252b3a;
 }
+
+
 
 .navbar-nav .dropdown-menu {
     height: auto !important;
